--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -1,39 +1,13 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.App1" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Primary Colors -->
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/primary_variant</item>
-        <item name="colorSecondary">@color/secondary</item>
-        <item name="colorSecondaryVariant">@color/secondary_variant</item>
-        
-        <!-- Background and Surface -->
-        <item name="android:colorBackground">@color/background</item>
-        <item name="colorSurface">@color/surface</item>
-        <item name="colorSurfaceVariant">@color/surface_variant</item>
-        
-        <!-- Status and Error Colors -->
-        <item name="colorError">@color/error</item>
-        
-        <!-- Text Colors -->
-        <item name="colorOnPrimary">@color/text_on_primary</item>
-        <item name="colorOnSecondary">@color/text_on_secondary</item>
-        <item name="colorOnBackground">@color/text_primary</item>
-        <item name="colorOnSurface">@color/text_primary</item>
-        <item name="colorOnError">@color/on_error</item>
-        
-        <!-- Typography -->
-        <item name="android:textColorPrimary">@color/text_primary</item>
-        <item name="android:textColorSecondary">@color/text_secondary</item>
-        <item name="android:textColorTertiary">@color/text_tertiary</item>
-        
-        <!-- Status Bar -->
-        <item name="android:statusBarColor">@color/primary</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
-        
-        <!-- Navigation Bar -->
-        <item name="android:navigationBarColor">@color/surface</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o">true</item>
+<resources>
+    <!-- Minimal Samsung-compatible theme -->
+    <style name="Base.Theme.App1" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Only essential colors for Samsung compatibility -->
+        <item name="colorPrimary">#FFE53E3E</item>
+        <item name="colorOnPrimary">#FFFFFFFF</item>
+        <item name="android:colorBackground">#FFFFFFFF</item>
+        <item name="colorSurface">#FFFFFFFF</item>
+        <item name="android:textColorPrimary">#FF000000</item>
+        <item name="android:statusBarColor">#FFE53E3E</item>
     </style>
 
     <style name="Theme.App1" parent="Base.Theme.App1" />
@@ -81,8 +55,12 @@
     </style>
     
     <style name="Button.App1.Secondary" parent="Widget.Material3.Button.TonalButton">
-        <item name="backgroundTint">@color/secondary</item>
+        <item name="backgroundTint">#171FB6</item>
         <item name="android:textColor">@color/text_on_secondary</item>
         <item name="cornerRadius">12dp</item>
+    </style>
+
+    <style name="Theme.App1.BottomNavigationView.ActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/primary_variant</item>
     </style>
 </resources>
