--- a/app/app/src/main/res/layout/dialog_add_habit.xml
+++ b/app/app/src/main/res/layout/dialog_add_habit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -9,13 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="Habit Name">
+        android:hint="Habit Name"
+        app:boxBackgroundMode="filled"
+        app:boxBackgroundColor="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextHabitName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/text_secondary"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -29,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Frequency:"
+            android:textColor="@color/black"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp" />
 
@@ -36,7 +42,8 @@
             android:id="@+id/spinnerFrequency"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:popupBackground="@color/white" />
 
     </LinearLayout>
 
