--- a/app/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/app/src/main/res/layout/dialog_add_task.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -9,13 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="Task Title">
+        android:hint="Task Title"
+        app:boxBackgroundMode="filled"
+        app:boxBackgroundColor="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/text_secondary"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -24,13 +29,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="Description (Optional)">
+        android:hint="Description (Optional)"
+        app:boxBackgroundMode="filled"
+        app:boxBackgroundColor="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
+            android:textColor="@color/black"
+            android:textColorHint="@color/text_secondary"
             android:maxLines="3" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -45,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Priority:"
+            android:textColor="@color/black"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp" />
 
@@ -52,7 +62,8 @@
             android:id="@+id/spinnerPriority"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:popupBackground="@color/white" />
 
     </LinearLayout>
 
@@ -65,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Category:"
+            android:textColor="@color/black"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp" />
 
@@ -72,7 +84,8 @@
             android:id="@+id/spinnerCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:popupBackground="@color/white" />
 
     </LinearLayout>
 
