--- a/app/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -19,9 +19,9 @@
         android:id="@+id/nav_goals"
         android:icon="@drawable/ic_goals"
         android:title="@string/nav_goals" />
-    
+
     <item
-        android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/nav_profile" />
+        android:id="@+id/nav_graphs"
+        android:icon="@drawable/ic_dashboard"
+        android:title="@string/nav_graphs" />
 </menu>
