--- a/app/app/src/main/res/values-land/dimens.xml
+++ b/app/app/src/main/res/values-land/dimens.xml
@@ -1,3 +1,13 @@
 <resources>
-    <dimen name="fab_margin">48dp</dimen>
+    <!-- Landscape-specific dimensions -->
+    <dimen name="spacing_medium">20dp</dimen>
+    <dimen name="spacing_large">28dp</dimen>
+    
+    <dimen name="text_size_xlarge">22sp</dimen>
+    <dimen name="text_size_xxlarge">26sp</dimen>
+    
+    <dimen name="card_corner_radius">14dp</dimen>
+    <dimen name="card_corner_radius_large">18dp</dimen>
+    
+    <dimen name="fab_margin_large">20dp</dimen>
 </resources>
