--- a/app/app/src/main/res/values-night/themes.xml
+++ b/app/app/src/main/res/values-night/themes.xml
@@ -28,6 +28,6 @@
         
         <!-- Navigation Bar for Dark Mode -->
         <item name="android:navigationBarColor">#FF1E293B</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
     </style>
 </resources>
