--- a/app/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/app/src/main/res/values-w600dp/dimens.xml
@@ -1,3 +1,15 @@
 <resources>
-    <dimen name="fab_margin">48dp</dimen>
+    <!-- Medium width screen dimensions (600dp and wider) -->
+    <dimen name="spacing_medium">24dp</dimen>
+    <dimen name="spacing_large">32dp</dimen>
+    <dimen name="spacing_xlarge">48dp</dimen>
+    
+    <dimen name="text_size_large">24sp</dimen>
+    <dimen name="text_size_xlarge">28sp</dimen>
+    <dimen name="text_size_xxlarge">32sp</dimen>
+    
+    <dimen name="card_corner_radius">20dp</dimen>
+    <dimen name="card_corner_radius_large">24dp</dimen>
+    
+    <dimen name="fab_margin_large">32dp</dimen>
 </resources>
